# aistock

./: .env.example  .gitignore  CHANGELOG.md  DEVELOP.md  README.md  pyproject.toml
.github/workflows/: ci.yml
config/: settings.example.yaml  settings.yaml
docs/: README.md  depend.md  deployment.md  detailed_design.md  high_level_design.md  implementation_plan.md  product.md  project_structure.md  resource.md  tech.md  user.md
docs/superpowers/plans/: 2026-05-15-akshare-adapter-plan.md
docs/superpowers/specs/: 2026-05-15-akshare-adapter-design.md
scripts/: backup.py  check_env.py
src/aistock/app/: __init__.py  cli.py  logging.py
src/aistock/backtest/: __init__.py  engine.py
src/aistock/broker/: __init__.py  base.py  paper.py  qmt.py
src/aistock/common/: __init__.py  types.py
src/aistock/config/: __init__.py  settings.py
src/aistock/data/: __init__.py  pipeline.py
src/aistock/data/sources/: __init__.py  akshare_client.py  base.py  tushare_client.py
src/aistock/db/: __init__.py  base.py  models.py
src/aistock/execution/: __init__.py  engine.py
src/aistock/feature/: __init__.py  factors.py
src/aistock/model/: __init__.py  predict.py  train.py
src/aistock/report/: __init__.py  dashboard.py  dashboard_app.py
src/aistock/risk/: __init__.py  engine.py
src/aistock/strategy/: __init__.py  engine.py
tests/: test_akshare_client.py  test_broker.py  test_cli.py  test_data_source_base.py  test_integration_data_source.py  test_pipeline.py  test_risk.py  test_settings.py  test_tushare_client.py
