[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "aistock"
version = "0.2.1"
description = "Personal AI-assisted quantitative trading system for STAR and GEM markets."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "backtrader>=1.9",
  "httpx>=0.27",
  "lightgbm>=4.3",
  "numpy>=1.26",
  "pandas>=2.2",
  "pydantic-settings>=2.3",
  "pyarrow>=16.1",
  "PyYAML>=6.0",
  "scikit-learn>=1.5",
  "SQLAlchemy>=2.0",
  "tushare>=1.2.10",
  "typer>=0.12",
  "xgboost>=2.1",
]

[project.optional-dependencies]
dev = ["pytest>=8.2", "ruff>=0.5"]
postgres = ["psycopg[binary]>=3.2"]
ui = ["plotly>=5.22", "streamlit>=1.36"]
llm = ["accelerate>=0.33", "torch>=2.3", "transformers>=4.44"]
all = ["psycopg[binary]>=3.2", "plotly>=5.22", "streamlit>=1.36", "accelerate>=0.33", "torch>=2.3", "transformers>=4.44"]

[project.scripts]
aistock = "aistock.app.cli:app"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
target-version = "py310"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "B", "C4"]
ignore = ["E501", "B023"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
